--- a/playbook-ansiblewin.yml
+++ b/playbook-ansiblewin.yml
@@ -1,13 +1,13 @@
 ---
-- name: Prueba
-  hosts: windows
+- hosts: windows
+  name: Prueba
   become: true
   
-  task:
-  - name: Show hostname
-    debug:
-      ansible_become: true
-      msg: "Hostname: {{ ansible_hostname }} "
-  - name: run the setup facts
-    ansible.builtin.setup:
+  tasks:
+    - name: Show hostname
+      debug:
+        ansible_become: true
+        msg: "Hostname: {{ ansible_hostname }} "
+    - name: run the setup facts
+      ansible.builtin.setup:
         
