--- a/playbook-ansiblewin.yml
+++ b/playbook-ansiblewin.yml
@@ -4,7 +4,7 @@
   become: true
   gather_facts: true
   
-  #tasks:
+  tasks:
     #- name: Show hostname
       #debug:
         #var: ansible_hostname
