--- a/playbook-ansiblewin.yml
+++ b/playbook-ansiblewin.yml
@@ -9,6 +9,14 @@
       debug:
         msg: "Hostname: {{ ansible_hostname }} "
         
-    - name: run the setup facts
-      ansible.builtin.setup:
+    - name: Version Windows
+      debug:
+        msg: "Hostname: {{ ansible_os_name }} "    
+        
+    - name: Verificar si esta instalado Firewall
+      ansible.windows.win_feature:
+        name: 
+        - Firewall
+        - W3Svc
+        state: present
         
