--- a/playbook-ansiblewin.yml
+++ b/playbook-ansiblewin.yml
@@ -15,7 +15,7 @@
         
     - name: Verificar si esta instalado Firewall
       ansible.windows.win_feature:
-        name: Firewall
+        name: firewalld
         state: present
         
     - name: Verificar si esta instalado Firewall
