--- a/playbook-ansiblewin.yml
+++ b/playbook-ansiblewin.yml
@@ -56,4 +56,22 @@
       ansible.windows.win_hostname:
         name: marcoparco
       register: res
+      
+    - name: Copy a single file, but keep a backup
+      ansible.windows.win_copy:
+        src: C:\Temp\reto1\reto1_content
+        dest: C:\Temp\reto1\backupreto1_content
+        backup: yes
+        
+    - name: Add a line to a file and ensure the resulting file uses unix line separators
+      community.windows.win_lineinfile:
+        path: C:\Temp\reto1\reto1_content
+        line: ESTA ES UNA PRUEBA
+        newline: unix
+        
+    - name: Add a line to a file and ensure the resulting file uses unix line separators
+      community.windows.win_lineinfile:
+        path: C:\Temp\example.conf
+        regex: '^OS version: Microsoft Windows Server 2019 Datacenter'
+        line: 'OS version: Microsoft Windows Server 2019 Datacenter=ANSIBLE CON WINDOWS'
     
