--- a/playbook-ansiblewin.yml
+++ b/playbook-ansiblewin.yml
@@ -73,7 +73,7 @@
         
     - name: Add a line to a file and ensure the resulting file uses unix line separators
       community.windows.win_lineinfile:
-        path: C:\Temp\example.conf
+        path: C:\Temp\reto1\reto1_content
         regex: '^OS version: Microsoft Windows Server 2019 Datacenter'
         line: 'OS version: Microsoft Windows Server 2019 Datacenter=ANSIBLE CON WINDOWS'
     
